--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2.9'
+version: '3.9'
 
 services:
   postgres_db:
@@ -10,10 +10,21 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_DB=${POSTGRES_DB}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - pg-data:/var/lib/postgresql/data
+
   todo:
     build: ./todo
     depends_on:
-      - postgres_db
+      postgres_db:
+        condition: service_healthy
+      rabbit:
+        condition: service_healthy
     ports:
       - ${TODO_PORT}:${TODO_PORT}
     environment:
@@ -23,13 +34,41 @@ services:
   auth:
     build: ./auth
     depends_on:
-      - postgres_db
+      postgres_db:
+        condition: service_healthy
+      rabbit:
+        condition: service_healthy
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - JWT_SECRET=${JWT_SECRET}
+
   rabbit:
     image: rabbitmq:3.13.4-management
     restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "rabbitmq-diagnostics -q ping"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     ports:
       - 5672:5672
       - 15672:15672
+
+  fields_microservice:
+    build: ./fields_microservice
+    depends_on:
+      postgres_db:
+        condition: service_healthy
+      rabbit:
+        condition: service_healthy
+    environment:
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=5432
+      - DB_USER=${POSTGRES_USER}
+      - DB_PASSWORD=${POSTGRES_PASSWORD}
+      - DB_NAME=${POSTGRES_DB}
+      - PG_DRIVER=${PG_DRIVER}
+      - RMQ_URL=amqp://rabbit:5672
+
+volumes:
+  pg-data:
